GB*-377: Fixed issue where on mobile there were two scrollbars one for the bottom sheet, on for the content in attribute filter this lead to weird scrolling behavior

--- a/src/app/map/components/map-attribute-filter/map-attribute-filter.component.scss
+++ b/src/app/map/components/map-attribute-filter/map-attribute-filter.component.scss
@@ -44,6 +44,10 @@
   .attribute-filter__content {
     overflow-y: scroll;
 
+    &--mobile {
+      overflow-y: unset;
+    }
+
     .attribute-filter__content__text {
       padding: 1em 0;
     }
